force-app/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Ahmadnagar
Akola
Amravati
Aurangabad
Bhandara
Bhusawal
Bid
Buldhana
Chandrapur
Daulatabad
Dhule
Jalgaon
Kalyan
Karli
Kolhapur
Mahabaleshwar
Malegaon
Matheran
Mumbai
Nagpur
Nanded
Nashik
Osmanabad
Pandharpur
Parbhani
Pune
Ratnagiri
Sangli
Satara
Sevagram
Solapur
Thane
Ulhasnagar
Vasai-Virar
Wardha
Yavatmal</description>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahmadnagar</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bhandara</fullName>
            </value>
            <value>
                <fullName>Bhusawal</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Buldhana</fullName>
            </value>
            <value>
                <fullName>Chandrapur</fullName>
            </value>
            <value>
                <fullName>Daulatabad</fullName>
            </value>
            <value>
                <fullName>Dhule</fullName>
            </value>
            <value>
                <fullName>Jalgaon</fullName>
            </value>
            <value>
                <fullName>Kalyan</fullName>
            </value>
            <value>
                <fullName>Karli</fullName>
            </value>
            <value>
                <fullName>Kolhapur</fullName>
            </value>
            <value>
                <fullName>Mahabaleshwar</fullName>
            </value>
            <value>
                <fullName>Malegaon</fullName>
            </value>
            <value>
                <fullName>Matheran</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Nanded</fullName>
            </value>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Osmanabad</fullName>
            </value>
            <value>
                <fullName>Pandharpur</fullName>
            </value>
            <value>
                <fullName>Parbhani</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Ratnagiri</fullName>
            </value>
            <value>
                <fullName>Sangli</fullName>
            </value>
            <value>
                <fullName>Satara</fullName>
            </value>
            <value>
                <fullName>Sevagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>