force-app/default/objects/Address__c/fields/NameApplicant__c.field-meta.xml
<CustomField>
    <fullName>NameApplicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NameApplicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Address (NameApplicant)</relationshipLabel>
    <relationshipName>Address1</relationshipName>
    <type>Lookup</type>
</CustomField>