force-app/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pin_Code__c</columns>
    <columns>City__c</columns>
    <columns>Applicant__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NameApplicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>